apps/devops-platform/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: devops-platform
  namespace: devops-platform
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: devops-platform
  template:
    metadata:
      labels:
        app: devops-platform
    spec:
      imagePullSecrets:
        - name: dockerhub-private
      containers:
        - name: devops-platform
          image: danindu05/devops-platform:feda4d1b327235f03683b6dd1646b3676a8b86c5
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

  strategy:
    blueGreen:
      activeService: devops-platform-active
      previewService: devops-platform-preview
      autoPromotionSeconds: 15
      scaleDownDelaySeconds: 30
