apps/devops-platform/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-platform
  namespace: devops-platform
spec:
  ingressClassName: traefik
  rules:
    - host: devops-platform.13.49.128.176.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-platform-active
                port:
                  number: 80
